--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "server",
+  "name": "moviealltimeserver",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "description": "this my first online ott site",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon src/index.js"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ravisingh007ravi/MovieAllTimeServer.git"
+  },
+  "author": "Ravi Singh",
   "license": "ISC",
-  "description": "",
+  "bugs": {
+    "url": "https://github.com/ravisingh007ravi/MovieAllTimeServer/issues"
+  },
+  "homepage": "https://github.com/ravisingh007ravi/MovieAllTimeServer#readme",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.3",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7"
+    "express": "^4.21.2",
+    "mongoose": "^8.9.3",
+    "nodemon": "^3.1.9"
   }
 }
