--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/ravisingh007ravi/MovieAllTimeServer#readme",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9"
   }
 }
